re PR c/27898 (Compile failure with --combine and anonymous structures)

PR c/27898
* c-typeck.c (tagged_types_tu_compatible_p): Enable exact
matches between anonymous union fields.

From-SVN: r130425